# hit_sim

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  build_dirs.sh  run.mac  vis.mac
plot/: plot_angles.py
src/: hit_sim.cpp
